--- a/Login/LogIn.css
+++ b/Login/LogIn.css
@@ -1,4 +1,4 @@
-* {
+* { 
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -7,24 +7,25 @@
 
 body {
     background-color: #D8F3DC;
-    background: linear-gradient(to right, #e2e2e2, #95D5B2);
     display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     height: 100vh;
+    overflow: hidden;
 }
 
 .container {
     background-color: #fff;
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     position: relative;
-    width: 768px;
+    width: 900px;
     max-width: 100%;
-    min-height: 480px;
+    min-height: 600px;
     overflow: hidden;
+    display: flex;
+    transition: all 0.6s ease-in-out;
 }
-
 .container form {
     display: flex;
     flex-direction: column;
@@ -80,54 +81,74 @@ body {
     top: 0;
     height: 100%;
     width: 50%;
+    padding: 50px;
     transition: all 0.6s ease-in-out;
+    z-index: 1;
 }
 
-.sign-in {
+.sign-in-container {
     left: 0;
     z-index: 2;
 }
 
-.sign-up {
-    left: 100%;
+.sign-up-container {
+    left: 70%;
+    opacity: 0;
+    z-index: 1;
+    overflow: hidden;
+}
+
+.container.active .sign-in-container {
+    transform: translateX(-100%);
     opacity: 0;
     z-index: 1;
 }
 
-.container.active .sign-in {
-    transform: translateX(-100%);
-}
-
-.container.active .sign-up {
-    transform: translateX(-100%);
+.container.active .sign-up-container {
+    transform: translateX(-50%);
     opacity: 1;
     z-index: 2;
 }
 
-.toggle-container {
+.overlay-container {
     position: absolute;
     top: 0;
     left: 50%;
     width: 50%;
     height: 100%;
     overflow: hidden;
+    transition: transform 0.6s ease-in-out;
+    border-radius: 150px 0 0 100px;
     z-index: 1000;
 }
-
-.toggle {
-    background: linear-gradient(to right, #95D5B2, #023535);
-    height: 100%;
-    position: relative;
+/*Probem me shfaqjen e Welcome*/
+.overlay {
+    background-color: #023535;
+    height: 100px;
+    background: linear-gradient(to right #018786 #023535);
+    position: absolute;
+    top: 0;
     left: -100%;
     width: 200%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    transform: translateX(0);
     transition: transform 0.6s ease-in-out;
 }
 
-.container.active .toggle {
+.container.active .overlay-container {
+    transform: translateX(-100%);
+    border-radius: 0 150px 100px 0 ;
+}
+
+.container.active .overlay {
     transform: translateX(50%);
 }
 
-.toggle-panel {
+.overlay-panel {
     position: absolute;
     width: 50%;
     height: 100%;
@@ -135,15 +156,55 @@ body {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 30px;
+    padding: 0 30%;
     text-align: center;
+    top: 0;
+    transform: translateX(0);
+    transition: all 0.6s ease-in-out;
+}
+/*levizja e sign in dhe sign up*/
+.overlay-left {
+    transform: translateX(-200%);
 }
 
-.toggle-left {
-    left: 0;
-}
-
-.toggle-right {
+.overlay-right {
     right: 0;
+    transform: translateX(0);
 }
 
+.container.active .overlay-right {
+    transform: translateX(200%);
+}
+.container.active .overlay-left {
+    transform: translateX(0);
+}
+/*Welcome */
+.overlay-panel h1 {
+    font-size: 32px;
+    font-weight: bold;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.overlay-panel p {
+    font-size: 16px;
+    color: #ddd;
+    line-height: 1.5;
+    margin-bottom: 20px;
+}
+
+/* butoni Sign In */
+button.ghost {
+    border-radius: 20px;
+    border: 1px solid #fff;
+    background-color: transparent;
+    color: white;
+    font-size: 14px;
+    padding: 12px 45px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+button.ghost:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
