--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -1,15 +1,8 @@
 /* Stilizimi i Navbarit */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');/* importojna fondin */
-
-body{
-    background-color: #015958;
-   
- 
-}
 header{
     box-sizing: border-box;
     margin: 0;
-    padding: 0;
     background-color: #023535;
     display: flex;
     justify-content: space-between;
@@ -18,6 +11,10 @@ header{
     min-height: 100px;
    
 
+}
+body {
+    margin: 0;
+    width: 100%;
 }
 li,a,button{
     font-family: "Poppins", sans-serif;
@@ -65,12 +62,8 @@ button:hover{
 }
 /*Stilizimi per pjesen e home-contentit*/
 .home{
-    
-    background-image: url('Projekti\Homepage-background1.jpg') ;
+    background-image: url(background1.png);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
- 
     width: 100%;
     height: 100vh;
     display: flex;
