--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -1,5 +1,8 @@
 /* Stilizimi i Navbarit */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');/* importojna fondin */
+*{
+    font-family: "Poppins", sans-serif;
+}
 header{
     box-sizing: border-box;
     margin: 0;
@@ -15,6 +18,7 @@ header{
 body {
     margin: 0;
     width: 100%;
+    background-color: #015958;
 }
 li,a,button{
     font-family: "Poppins", sans-serif;
@@ -185,4 +189,83 @@ button:hover{
     color: #edf0f1;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.25);
     transform: scale(1.05); 
+}
+.slider{
+   
+    box-sizing: border-box ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: linear-gradient(#008F8C, #015958);  
+
+}
+.card-list .card-item .card-link {
+    width: 400px;
+    display: block;
+    padding: 18px;
+    background: #fff;
+    border-radius: 12px;
+    text-decoration: none;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15); 
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    
+}
+
+.card-list .card-item .card-link:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.25);
+    
+
+}
+
+.card-list .card-link .card-image {
+    width: 100%; 
+    aspect-ratio: 16 / 9; 
+    object-fit: cover; 
+    border-radius: 10px;
+    margin-bottom: 12px;
+}
+
+.card-list .card-link .permbajtja {
+    color: #023535;
+    padding: 8px 16px;
+    font-size: 0.95rem;
+    font-weight: 500;
+    margin-bottom: 16px; 
+    background: #DDE4FF;
+    width: fit-content;
+    border-radius: 50px;
+}
+
+
+.card-list .card-link .titulli {
+    font-size: 1.2rem;
+    color: black;
+    font-weight: 600;
+    line-height: 1.4;
+    margin-bottom: 12px;
+}
+
+
+.card-list .card-link .card-button {
+    height: 35px;
+    width: 35px;
+    color: #023535;
+    border-radius: 50%;
+    margin: 20px 0 5px;
+    background: none;
+    cursor: pointer;
+    border: 2px solid #023535;
+    transform: rotate(-45deg);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.card-list .card-link .card-button:hover {
+    background-color: #023535;
+    color: #fff;
+    border-color: #fff;
 }
