Backgroundi i Login Formes

--- a/Login/LogIn.css
+++ b/Login/LogIn.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #D8F3DC;
+    background: url('Background.png') ;
     display: flex;
     justify-content: center;
     align-items: center;
