--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -68,13 +68,14 @@ button:hover{
 .home{
     background-image: url(background1.png);
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+    width: 90%;
+    height: 78vh;
     display: flex;
     align-items: center;
     justify-content: left;
     align-items: flex-start; 
     padding: 50px 5%;
+    
 
 }
 
@@ -193,8 +194,11 @@ button:hover{
 /*Pjesa e what we offer ne css*/
 .what-we-offer {
     background: url('Part2background.png') ;
-    background-size: cover;
+    background-size: 100% ;
     border-radius: 10px;
+    padding-top: 50px;
+    background-repeat: no-repeat;
+    height: 70vh;
   
 }
 
@@ -208,7 +212,7 @@ button:hover{
 
 .katroret {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;  
     gap: 20px;
 }
@@ -363,6 +367,99 @@ button:hover{
     color: #fff;
     border-color: #fff;
 }
+/*Pjesa e Reviews*/
+.reviews {
+    padding: 32px 16px;
+    box-sizing: border-box;
+    background-color: #f9f9f9;
+  }
+  
+  .review {
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 32px;
+  }
+  
+  .container-majtas h1 {
+    margin-bottom: 24px;
+    font-size: 44px;
+    font-weight: 600;
+    color: #023535;
+  }
+  
+  .container-majtas p {
+    margin-bottom: 20px;
+    line-height: 28px;
+    font-size: 19px;
+    color: #4d4d4d;
+  }
+  
+  .container-majtas button {
+    padding: 16px 40px;
+    margin-top: 16px;
+    border: none;
+    border-radius: 8px;
+    font-size: 18px;
+    background-color: #0a7075;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  
+  .container-majtas button:hover {
+    background-color: #015958;
+  }
+  
+  .container-djathtas {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 24px;
+  }
+  
+  .card {
+    padding: 24px;
+    display: flex;
+    align-items: flex-start;
+    gap: 24px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+  }
+  
+  .card img {
+    max-width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #0a7075;
+  }
+  
+  .card-content {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+  }
+  
+  .card-content span i {
+    font-size: 32px;
+    color: #015958;
+  }
+  
+  .card-details {
+    font-style: italic;
+    color: #333333;
+    margin-bottom: 8px;
+  }
+  
+  .card-details h4 {
+    text-align: right;
+    color: #0a7075;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  
 /*Pjesa e footerit*/
 .footer {
     background-color: #023535;
