--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -90,18 +90,21 @@ button:hover{
     font-size: 32px;
     font-family:"Poppins", sans-serif;  
     margin-bottom: 5px;
+    color: #DDE4FF; 
 }
 .contenti-home h1{
     font-size:  48px;
     font-weight: 700;
     font-family:"Poppins", sans-serif; 
     margin-bottom: 10px;
-    line-height: 1.2; 
+    line-height: 1.2;
+    color: #DDE4FF; 
 }
 .contenti-home p{
     font-size: 16px;
     margin-bottom: 15px; 
     line-height: 1.5;
+    color: #DDE4FF; 
 }
 .contenti-home .view-more-btn {
     margin-top: 20px; 
@@ -193,7 +196,7 @@ button:hover{
 }
 /*Pjesa e what we offer ne css*/
 .what-we-offer {
-    background: url('Part2background.png') ;
+    background: url('Backgroundi-i-dyte-.png') ;
     background-size: 100% ;
     border-radius: 10px;
     padding-top: 50px;
@@ -207,7 +210,7 @@ button:hover{
     font-size: 2.5rem;
     margin-bottom: 30px;
     font-family: "Poppins", sans-serif;
-    color:#DDE4FF;
+    color:#023535;
 }
 
 .katroret {
