--- a/Events/Events.css
+++ b/Events/Events.css
@@ -55,8 +55,10 @@ button:hover{
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    color: white;
-    background-color: #0A7075;
+    color: white; 
+    background: linear-gradient(to right , black, #023535 ,#0A7075, black);
+    height: 100vh; 
+    margin: 0;
   }
   
   .conteiner {
@@ -123,7 +125,7 @@ body {
   }
   
   .kuti {
-    background: #a9a9a9;
+    background: #0A7075;
     border-radius: 10px;
     padding: 20px;
     text-align: center;
@@ -144,13 +146,13 @@ body {
   .kuti h2 {
     font-size: 18px;
     margin-bottom: 10px;
-    color: black;
+    color: white;
   }
   
   .kuti p {
     font-size: 14px;
     margin-bottom: 15px;
-    color: black;
+    color: white;
   }
   
   .kuti button {
@@ -166,3 +168,123 @@ body {
   .kuti button:hover {
     background: #008F8C;
   }
+  .card {
+   background-color: lightgrey;
+    color: #fff; 
+    padding: 40px 10%; 
+    border-radius: 10px; 
+    text-align: center; 
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1); 
+    margin-top: 50px; 
+}
+
+.titulli {
+    font-size: 2.5rem; 
+    font-weight: 700; 
+    margin-bottom: 20px;
+    font-family: "Poppins", sans-serif; 
+    color: #023535; 
+}
+
+.paragrafi {
+    font-size: 1.2rem; 
+    line-height: 1.6; 
+    font-family: "Poppins", sans-serif; 
+    color: #023535; 
+    max-width: 900px; 
+    margin: 0 auto; 
+}
+
+.card:hover {
+    transform: translateY(-5px); 
+    
+}
+.butoni{
+  display: inline-block;
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 14px;
+    color: white;
+    background-color: #008F8C;
+    border-radius: 20px; 
+    text-decoration: none;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
+}
+  .footer {
+    background-color: #023535;
+    color: #edf0f1;
+    padding: 40px 10%;
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.1);
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-section {
+    flex: 1;
+    margin: 20px;
+}
+
+.footer-title {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #DDE4FF;
+    margin-bottom: 10px;
+}
+
+.footer-description {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #e0e0e0;
+}
+
+.footer-links {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-links li {
+    margin: 10px 0;
+}
+
+.footer-links li a {
+    text-decoration: none;
+    color: #EDF0F1;
+    transition: color 0.3s ease;
+}
+
+.footer-links li a:hover {
+    color: #008F8C;
+}
+
+.social-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.social-icon {
+    font-size: 1.5rem;
+    color: #EDF0F1;
+    transition: color 0.3s ease;
+}
+
+.social-icon:hover {
+    color: #008F8C;
+}
+
+.footer-bottom {
+    margin-top: 40px;
+    font-size: 0.9rem;
+    color: #e0e0e0;
+}
+
+.footer-bottom p {
+    margin: 0;
+}
