--- a/Homepage/Homepage.css
+++ b/Homepage/Homepage.css
@@ -18,10 +18,10 @@ body {
     margin: 0;
     width: 100%;
     background-color: #015958;
-    overflow-x: hidden
+    overflow-x: hidden;
     padding: 0;
 }
-li,a,butto {
+li,a,button{
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -92,7 +92,7 @@ button:hover{
     }
     .navbar {
         display: flex;
-        flex-direction: column; /* Shfaq elementet në kolona për ekran të vogël */
+        flex-direction: column;
         align-items: center;
     }
 
@@ -102,7 +102,7 @@ button:hover{
 
     .hero {
         margin: 0;
-        width: 100%; /* Siguron që hero image nuk del jashtë ekranit */
+        width: 100%; 
     }
 }
 
