--- a/Login/Signin-up.css
+++ b/Login/Signin-up.css
@@ -75,7 +75,7 @@ form {
 }
 .account-text {
     margin: 10px 0;
-    font-size: 10px;
+    font-size: 14px;
     color: #444;
 }
 .social-media {
@@ -99,4 +99,45 @@ a {
 .social-icon:hover {
     color: #018786
 
+}
+@media screen and (max-width: 768px){
+    .container{
+        width: 90%;
+        padding: 15px;
+    }
+    .title{
+        font-size: 24px;
+    }
+    .btn{
+        width: 100%;
+        height: 45px;
+    }
+    .input-form{
+        height: 45px;
+    }
+    .input-form input{
+        font-size: 14px;
+    }
+    
+}
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 14px;
+        padding: 10px;
+    }
+    .container {
+        width: 95%;
+        padding: 10px;
+    }
+    .title {
+        font-size: 20px;
+    }
+    .btn {
+        width: 100%;
+        font-size: 12px;
+    }
+    .input-form input {
+        font-size: 13px;
+        padding: 0 10px;
+    }
 }
