--- a/adminStaff.css
+++ b/adminStaff.css
@@ -4,6 +4,7 @@ body {
     margin: 0;
     padding: 0;
 }
+
 header {
     display: flex;
     justify-content: space-between;
@@ -18,6 +19,7 @@ header {
     max-height: 50px;
     height: auto;
 }
+
 nav ul {
     list-style: none;
     display: flex;
@@ -39,9 +41,15 @@ h1 {
     text-align: center;
 }
 
+h2 {
+    color: #023535;
+    text-align: center;
+}
+
 table {
     width: 100%;
     border-collapse: collapse;
+    margin-bottom: 40px;
 }
 
 th, td {
@@ -82,4 +90,48 @@ td {
 
 .actions a.delete:hover {
     background-color: #e74c3c;
+}
+/* staf i ri*/
+form {
+    max-width: 500px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #023535;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+input[type="text"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+textarea {
+    height: 100px;
+    resize: vertical;
+}
+
+input[type="file"] {
+    padding: 10px;
+    margin: 10px 0;
+}
+
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #023535;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #015958;
 }
